--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<section>Slide 1</section>
-				<section>Slide 2</section>
+				<section data-markdown="slides/file-structure.md"></section>
 			</div>
 		</div>
 
