Added state page.

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 		<div class="reveal">
 			<div class="slides">
 				<section data-markdown="slides/file-structure.md"></section>
+				<section data-markdown="slides/state.md"></section>
 			</div>
 		</div>
 
