Add directory structure and file structure.

--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<section data-markdown="slides/file-structure.md"></section>
+				<section data-markdown="slides/files-overview.md"></section>
+				<section data-markdown="slides/directory-structure.md"></section>
 			</div>
 		</div>
 
