Add directory structure proposal.

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 			<div class="slides">
 				<section data-markdown="slides/files-overview.md"></section>
 				<section data-markdown="slides/directory-structure.md"></section>
+				<section data-markdown="slides/directory-structure-proposal.md"></section>
 				<section data-markdown="slides/state.md"></section>
 			</div>
 		</div>
