New slides added

--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
 				<section data-markdown="slides/directory-structure.md"></section>
 				<section data-markdown="slides/directory-structure-proposal.md"></section>
 				<section data-markdown="slides/state.md"></section>
+				<section data-markdown="slides/code-style.md"></section>
+				<section data-markdown="slides/magic-constants.md"></section>
 			</div>
 		</div>
 
