Add screenshots for code examples.

--- a/index.html
+++ b/index.html
@@ -28,8 +28,12 @@
 				<section data-markdown="slides/directory-structure.md"></section>
 				<section data-markdown="slides/directory-structure-proposal.md"></section>
 				<section data-markdown="slides/state.md"></section>
+				<section data-markdown="slides/state-proposal.md"></section>
 				<section data-markdown="slides/code-style.md"></section>
-				<section data-markdown="slides/magic-constants.md"></section>
+				<section data-markdown="slides/code-style-examples.md"></section>
+				<section data-markdown="slides/magic-things.md"></section>
+				<section data-markdown="slides/magic-strings.md"></section>
+				<section data-markdown="slides/magic-numbers.md"></section>
 			</div>
 		</div>
 
