Add code examples screenshots.

--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
 				<section data-markdown="slides/magic-things.md"></section>
 				<section data-markdown="slides/magic-strings.md"></section>
 				<section data-markdown="slides/magic-numbers.md"></section>
+				<section data-markdown="slides/code-review.md"></section>
+				<section data-markdown="slides/code-review-examples.md"></section>
+				<section data-markdown="slides/reinvent-wheel.md"></section>
 			</div>
 		</div>
 
